further project setup

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,5 +1,8 @@
-@import 'setup';
-@import 'fonts';
+@import 'partials/setup';
+@import 'partials/fonts';
+@import 'partials/home';
+@import 'partials/blog';
+@import 'partials/contact';
 
 // colour variables
 
