added general styles and worked on home page header

--- a/styles/sass/partials/_fonts.scss
+++ b/styles/sass/partials/_fonts.scss
@@ -7,7 +7,7 @@
 	color: $black;
 	font-family: 'Kumar One Outline', sans-serif;
 	font-weight: regular;
-	line-height: 64px;
+	line-height: 6.4rem;
 }
 
 // KUMAR SOLID
@@ -16,7 +16,7 @@
 	color: $black;
 	font-family: 'Kumar One', sans-serif;
 	font-weight: regular;
-	line-height: 58px;
+	line-height: 5.8rem;
 	letter-spacing: 2.1px;
 }
 
@@ -26,7 +26,7 @@
 	color: $black;
 	font-family: 'Lato', sans-serif;
 	font-weight: 700;
-	line-height: 29px;
+	line-height: 2.9rem;
 	letter-spacing: 1.4px;
 }
 
@@ -37,7 +37,7 @@
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
 	letter-spacing: 2px;
-	line-height: 32px;
+	line-height: 3.2rem;
 }
 
 
