--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -1,54 +1,110 @@
+// Header
+
 .mainHeader {
-	height: 100vh;
-	max-height: 800px;
-	background: url(../../../assets/header-home.jpg) center / cover;
-	position: relative;
+  height: 100vh;
+  max-height: 800px;
+  background: url(../../../assets/header-home.jpg) center / cover;
+  position: relative;
 }
 
 .mainHeaderNavFlex {
+  // border: 2px solid gold;
+  display: flex;
+  justify-content: flex-end;
 
-	// border: 2px solid gold;
-	display: flex;
-	justify-content: flex-end;
+  .mainHeaderNav {
+    // border: 2px solid blue;
+    width: 50%;
+    min-width: 400px;
+  }
 
-	.mainHeaderNav {
-		// border: 2px solid blue;
-		width: 50%;
-		min-width: 400px;
-	}
-
-	ul {
-		display: flex;
-		justify-content: space-between;
-		padding: 20px;
-		// border: 2px solid blue;
-	}
+  ul {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    // border: 2px solid blue;
+  }
 }
 
 .mainHeaderImageFlex {
-	display: flex;
-	flex-wrap: wrap;
-	text-align: left;
-	// border: 2px solid green;
-	width: 54%;
-	min-width: 600px;
-	justify-content: flex-end;
-	position: relative;
-	right: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+  // border: 2px solid green;
+  width: 54%;
+  min-width: 600px;
+  justify-content: flex-end;
+  position: relative;
+  right: 100px;
 
-	h1 {
-	// border: 2px solid red;
-	width: 80%;
-	}
-
-
+  h1 {
+    // border: 2px solid red;
+    width: 80%;
+    margin: 45px 0;
+  }
 }
 
 .mainHeaderImage {
-	// border: 2px solid blue;
-	width: 100%;
-	img {
-		width: 700px;
-		object-fit: cover;
-	}
+  // border: 2px solid blue;
+  width: 100%;
+
+  img {
+    width: 700px;
+    object-fit: cover;
+  }
+}
+
+// Section 1- Materials
+
+.materials {
+  display: flex;
+  align-items: center;
+  border: 2px solid rgb(35, 161, 35);
+  min-height: 400px;
+}
+
+.materialsFlex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid green;
+  padding: 30px;
+}
+
+.materialsText {
+  width: 66%;
+  margin: 25px;
+  margin-bottom: 0;
+  margin-top: 0;
+
+  p {
+    width: 90%;
+  }
+
+  .materialsLink {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    border: 2px solid red;
+  }
+
+  a {
+    // padding: 10px;
+    @include subHeading(1.5rem);
+    text-align: center;
+    width: 100%;
+    background-color: $everGreen;
+    color: $offWhite;
+  }
+}
+
+.materialsImage {
+  width: 280px;
+  height: 280px;
+
+  img {
+    width: 100%;
+    box-shadow: -10px 10px 0 5px $yellow;
+  }
 }
