--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,9 +1,3 @@
-@import 'partials/setup';
-@import 'partials/fonts';
-@import 'partials/home';
-@import 'partials/blog';
-@import 'partials/contact';
-
 // colour variables
 
 $yellow: #F8FB05;
@@ -11,6 +5,13 @@ $everGreen: #065635;
 $offWhite: #F5F5F5;
 $mint: #E0FDDF;
 $black: #151514;
+
+@import 'partials/setup';
+@import 'partials/fonts';
+@import 'partials/home';
+@import 'partials/blog';
+@import 'partials/contact';
+
 
 .wrapper {
   width: 95%;
@@ -42,11 +43,20 @@ h1 {
 }
 
 h2 {
-	@include subHeading(3.3rem);
+	@include subHeading(2.8rem);
 }
 
 p {
 	@include bodyText(2rem);
 }
 
+h1,
+h2,
+h3,
+h4,
+p,
+a {
+  margin: 0;
+  padding: 0;
+}
 
