--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -62,7 +62,7 @@
 .materials {
   display: flex;
   align-items: center;
-  border: 2px solid rgb(35, 161, 35);
+  // border: 2px solid rgb(35, 161, 35);
   min-height: 400px;
 }
 
@@ -70,7 +70,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid green;
   padding: 30px;
 }
 
@@ -134,3 +133,50 @@
   display: block;
 }
 
+// features
+
+.mainFeaturesFlex1 {
+  min-height: 450px;
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+
+  i {
+    font-size: 2rem;
+    position: absolute;
+    top: 14px;
+  }
+
+  .featuresIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    position: relative;
+
+    .iconBackground {
+      background: $yellow;
+      border-radius: 50%;
+      height: 50px;
+      width: 50px;
+      align-self: flex-start;
+    }
+  }
+}
+
+.customizedFlex,
+.communityFlex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 5px;
+  width: 50%;
+}
+
+.featuresText1,
+.featuresText2,
+.featuresText3,
+.featuresText4 {
+  display: flex;
+  height: 200px;
+}
