--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -136,7 +136,7 @@
 // features
 
 .mainFeaturesFlex1 {
-  min-height: 450px;
+  min-height: 500px;
   display: flex;
   align-items: center;
   margin: 20px 0;
@@ -179,4 +179,75 @@
 .featuresText4 {
   display: flex;
   height: 200px;
+}
+
+// benefits sections
+
+.mainBenefits {
+  
+  background: $mint;
+}
+
+.benefitsWrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+}
+
+.benefitsFlexContainer1,
+.benefitsFlexContainer2 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  min-height: 700px;
+  
+}
+
+.benefitsFlexContainer1 {
+  border: 2px solid orange;
+}
+
+.benefitsFlexContainer2 {
+  border: 2px solid red;
+}
+
+
+.benefitsText1,
+.benefitsText2 {
+  border: 2px solid blue;
+  height: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  width: 450px;
+}
+
+.benefitsText1 {
+  align-self: flex-end;
+  text-align: right;
+
+  h2 {
+    border: 2px solid orange;
+
+  }
+}
+
+.benefitsImage {
+  
+}
+
+.benefitsImage img {
+  width: 100%;
+  display: block;
+}
+
+.benImgOne img {
+  
+  box-shadow: 10px 10px 0 5px $yellow;
+  
+}
+
+.benImgTwo img {
+  
+  box-shadow: -10px 10px 0 5px $yellow;
 }
