--- a/styles/sass/partials/_fonts.scss
+++ b/styles/sass/partials/_fonts.scss
@@ -40,4 +40,17 @@
 	line-height: 3.2rem;
 }
 
+// LINK
+
+@mixin linkButton() {
+    margin-top: 10px;
+    @include subHeading(1.5rem);
+    background-color: $everGreen;
+    color: $offWhite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 225px;
+    height: 50px;
+}
 
