--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -85,15 +85,7 @@
 
 
   .linkButton {
-    margin-top: 10px;
-    @include subHeading(1.5rem);
-    background-color: $everGreen;
-    color: $offWhite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 225px;
-    height: 50px;
+    @include linkButton();
   }
 }
 
@@ -203,38 +195,54 @@
   
 }
 
-.benefitsFlexContainer1 {
-  border: 2px solid orange;
+.emptyFlex {
+  // display: block;
+  width: 100px;
 }
-
-.benefitsFlexContainer2 {
-  border: 2px solid red;
-}
-
 
 .benefitsText1,
 .benefitsText2 {
-  border: 2px solid blue;
   height: 50%;
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  width: 450px;
+  width: 400px;
 }
 
 .benefitsText1 {
+  justify-content: flex-end;
   align-self: flex-end;
-  text-align: right;
+  position: relative;
+  right: 60px;
 
   h2 {
-    border: 2px solid orange;
+    align-self: flex-end;
+  }
 
+  p {
+    text-align: right;
+  }
+
+  .linkButton {
+    @include linkButton();
   }
 }
 
-.benefitsImage {
-  
-}
+.benefitsText2 {
+  align-self: flex-end;
+  text-align: right;
+  position: relative;
+  left: -90px;
+
+  p {
+    text-align: left;
+  }
+
+  .linkButton {
+    @include linkButton();
+  }
+
+  }
 
 .benefitsImage img {
   width: 100%;
@@ -242,12 +250,64 @@
 }
 
 .benImgOne img {
-  
   box-shadow: 10px 10px 0 5px $yellow;
+  position: relative;
+  left: -60px;
+  top: -30px;
   
 }
 
 .benImgTwo img {
-  
   box-shadow: -10px 10px 0 5px $yellow;
+  position: relative;
+  right: -60px;
+  bottom: -50px;
 }
+
+// section 5 - style search image
+
+.styleSearchImage img {
+  width: 100%;
+  object-fit: cover;
+}
+
+// section 6 - style search
+
+.styleSearchFlex {
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .styleSearchText {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  p {
+    width: 80%;
+    padding: 10px 0 20px 0;
+  }
+
+  .linkButton {
+    @include linkButton();
+  }
+
+  
+}
+
+// footer
+
+footer {
+  display: flex;
+  justify-content: center;
+  background: $black;
+
+  p {
+    color: $offWhite;
+    padding: 10px 0;
+  }
+}
+
