--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -1,22 +1,17 @@
 // Header
-// * {
-//   border: 2px solid cornflowerblue;
-// }
 
 .mainHeader {
   height: 100vh;
   max-height: 800px;
-  background: url(../../../assets/header-home.jpg) center / cover;
+  background: url(/assets/header-home.jpg) center / cover;
   position: relative;
 }
 
 .mainHeaderNavFlex {
-  // border: 2px solid gold;
   display: flex;
   justify-content: flex-end;
 
   .mainHeaderNav {
-    // border: 2px solid blue;
     width: 50%;
     min-width: 400px;
   }
@@ -25,7 +20,6 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    // border: 2px solid blue;
   }
 }
 
