--- a/styles/styles.css
+++ b/styles/styles.css
@@ -249,7 +249,7 @@ ul {
 .mainHeader {
   height: 100vh;
   max-height: 800px;
-  background: url(../../../assets/header-home.jpg) center/cover;
+  background: url(/assets/header-home.jpg) center/cover;
   position: relative;
 }
 
@@ -687,11 +687,121 @@ footer p {
   padding: 10px 0;
 }
 
+.blogBody {
+  background-color: #E0FDDF;
+}
+
+.blogHeader {
+  height: 70vh;
+  max-height: 500px;
+  background: url(/assets/blog-image.jpg) center/cover;
+  position: relative;
+}
+
+.blogHeaderFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.blogHeaderFlex h1 {
+  margin-top: 100px;
+}
+
+.blogHeaderNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  min-width: 400px;
+  margin-top: 20px;
+}
+
+.blogHeaderNav .blogLogo {
+  width: 200px;
+  min-width: 150px;
+  margin-top: 10px;
+}
+
+.blogHeaderNav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 50px;
+}
+
+.blogHeaderNav a {
+  padding: 30px;
+}
+
+.blogSection {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blogSection .blogPost {
+  background-color: #F5F5F5;
+  min-width: 65%;
+}
+
+.blogSection .blogImage img {
+  width: 100%;
+  position: relative;
+  top: -120px;
+  -webkit-box-shadow: 10px 10px 0 5px #F8FB05;
+          box-shadow: 10px 10px 0 5px #F8FB05;
+}
+
+.blogSection .blogText {
+  width: 650px;
+  min-width: 65%;
+  position: relative;
+  top: -80px;
+  margin: 20px;
+}
+
+.blogAside {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.blogAside .blogAsideText1,
+.blogAside .blogAsideText2 {
+  background-color: #F8FB05;
+}
+
+.blogAside .blogAsideText1 {
+  width: 75%;
+}
+
 .wrapper {
   width: 95%;
   max-width: 1200px;
   margin: 0 auto;
-  border: 2px solid blue;
 }
 
 nav {
@@ -737,6 +847,17 @@ h2 {
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
+}
+
+h3 {
+  font-size: 1.8rem;
+  color: #151514;
+  font-family: 'Kumar One', sans-serif;
+  font-weight: regular;
+  line-height: 5.8rem;
+  letter-spacing: 2.1px;
+  letter-spacing: 1.5px;
+  line-height: 2rem;
 }
 
 p {
