--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -12,6 +12,7 @@
 
 .blogHeader {
   height: 70vh;
+  min-height: 400px;
   max-height: 500px;
   background: url(/assets/blog-image.jpg) center / cover;
   position: relative;
@@ -20,9 +21,11 @@
 .blogHeaderFlex {
   display: flex;
   flex-direction: column;
+  
 
   h1 {
     margin-top: 100px;
+    
   }
 }
 
@@ -30,9 +33,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: baseline;
   width: 100%;
   min-width: 400px;
-  margin-top: 20px;
+  
 
   .blogLogo {
     width: 200px;
@@ -44,11 +48,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
-  }
+    width: 600px;
+    min-width: 400px;
 
-  a {
-    padding: 30px;
   }
 }
 
@@ -60,36 +62,103 @@
   .blogPost {
     background-color: $offWhite;
     min-width: 65%;
+    box-shadow: 10px 10px 0 5px $yellow;
   }
 
   .blogImage img {
     width: 100%;
     position: relative;
     top: -120px;
-    box-shadow: 10px 10px 0 5px $yellow;
+    box-shadow: 10px 15px 0 5px $yellow;
   }
 
   .blogText {
     width: 650px;
-    min-width: 65%;
     position: relative;
     top: -80px;
     margin: 20px;
+    min-height: 1200px;
   }
 
 }
 
 .blogAside {
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  width: 75%;
+
+  img {
+    box-shadow: -10px 10px 0 5px $yellow;
+    width: 320px;
+  }
 
   .blogAsideText1,
   .blogAsideText2 {
     background-color: $yellow;
+    width: 335px;
+    padding: 20px;
+
   }
 
-  .blogAsideText1 {
-    width: 75%;
+  h3 {
+    padding-bottom: 15px;
+  }
+
+  ul {
+    margin-left: 20px;
+  }
+
+  li {
+   list-style-type: disc;
+   font-size: 2rem;
+  }
+
+  li a {
+    color: $black;
+
+    &:hover {
+      color: lighten($black, 30%);
+    }
+  }
+}
+
+.blogTextContainer {
+  display: flex;
+  justify-content: flex-end;
+  height: 1200px;
+ 
+}
+
+.blogText {
+  padding-right: 50px;
+
+  p {
+    margin-bottom: 35px;
+  }
+
+  h2 + p {
+    margin-top: 35px;
+    font-style: italic;
+  }
+
+  span {
+    font-weight: bolder;
+  }
+  
+}
+
+.commentFlex {
+  width: 65%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 50px;
+
+  .commentContainer {
+    width: 650px;
+    padding-right: 50px;
+    margin: 0 20px;
+    margin-top: 20px;
   }
 }
