--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -2,7 +2,8 @@
 
 .mainHeader {
   height: 100vh;
-  max-height: 800px;
+  max-height: 1000px;
+  min-height: 800px;
   background: url(/assets/header-home.jpg) center / cover;
   position: relative;
 }
@@ -19,7 +20,7 @@
   ul {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+   
   }
 }
 
@@ -186,6 +187,7 @@
   display: flex;
   flex-direction: column;
   min-height: 700px;
+   position: relative;
   
 }
 
@@ -206,8 +208,9 @@
 .benefitsText1 {
   justify-content: flex-end;
   align-self: flex-end;
-  position: relative;
+  position: absolute;
   right: 60px;
+  bottom: 0;
 
   h2 {
     align-self: flex-end;
@@ -225,8 +228,10 @@
 .benefitsText2 {
   align-self: flex-end;
   text-align: right;
-  position: relative;
-  left: -90px;
+  position: absolute;
+  
+  left: 60px;
+  
 
   p {
     text-align: left;
@@ -239,13 +244,15 @@
   }
 
 .benefitsImage img {
+ 
   width: 100%;
   display: block;
 }
 
 .benImgOne img {
   box-shadow: 10px 10px 0 5px $yellow;
-  position: relative;
+  position: absolute;
+  
   left: -60px;
   top: -30px;
   
@@ -253,9 +260,10 @@
 
 .benImgTwo img {
   box-shadow: -10px 10px 0 5px $yellow;
-  position: relative;
+  position: absolute;
   right: -60px;
   bottom: -50px;
+ 
 }
 
 // section 5 - style search image
