--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -21,11 +21,9 @@
 .blogHeaderFlex {
   display: flex;
   flex-direction: column;
-  
 
   h1 {
     margin-top: 100px;
-    
   }
 }
 
@@ -36,7 +34,6 @@
   align-items: center;
   width: 100%;
   min-width: 400px;
-  
 
   .blogLogo {
     width: 200px;
@@ -50,7 +47,6 @@
     align-items: center;
     width: 600px;
     min-width: 400px;
-
   }
 }
 
@@ -79,7 +75,6 @@
     margin: 20px;
     min-height: 1200px;
   }
-
 }
 
 .blogAside {
@@ -99,7 +94,6 @@
     background-color: $yellow;
     width: 335px;
     padding: 20px;
-
   }
 
   h3 {
@@ -111,8 +105,8 @@
   }
 
   li {
-   list-style-type: disc;
-   font-size: 2rem;
+    list-style-type: disc;
+    font-size: 2rem;
   }
 
   li a {
@@ -128,7 +122,6 @@
   display: flex;
   justify-content: flex-end;
   height: 1200px;
- 
 }
 
 .blogText {
@@ -146,7 +139,6 @@
   span {
     font-weight: bolder;
   }
-  
 }
 
 .blogAsideText2 li a {
@@ -159,7 +151,6 @@
   justify-content: flex-end;
   margin-top: 80px;
   margin-bottom: 25px;
-
 
   .commentContainer {
     width: 650px;
@@ -187,12 +178,16 @@
 
 // comment form
 
-
 .blogForm {
   width: 65%;
-  border: 2px solid red;
+  // border: 2px solid red;
   display: flex;
   justify-content: flex-end;
+
+  input {
+    border: none;
+    background: $mint;
+  }
 
   fieldset {
     border: none;
@@ -208,22 +203,29 @@
   .formFlex1 {
     height: 75px;
     width: 100%;
-    border: 2px solid red;
     position: relative;
     display: flex;
+    justify-content: space-between;
     padding: 20px;
     padding-left: 0;
-    
+
     label {
       position: absolute;
-      top: 0;
+      top: -7px;
+      margin-left: 20px;
+
+      @include bodyText(1.5rem);
+      text-transform: uppercase;
     }
-    
-    .emailFlex, .nameFlex{
-      width: 50%;
-      input[type="text"], input[type="email"] {
-      width: 100%;
-      padding: 10px;
+
+    .emailFlex,
+    .nameFlex {
+      width: 47%;
+      input[type="text"],
+      input[type="email"] {
+        width: 100%;
+        padding: 10px;
+        border-bottom: 2px solid $everGreen;
       }
     }
   }
@@ -232,7 +234,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    border: 2px solid red;
     padding: 20px;
     padding-left: 0;
 
@@ -242,8 +243,12 @@
       min-height: 200px;
       max-height: 200px;
       padding: 20px;
-    }
+      background-color: $mint;
+      border: 2px solid $everGreen; 
+      resize: none;
 
+      @include bodyText(1.5rem);
+    }
 
     button {
       @include linkButton();
@@ -256,6 +261,19 @@
 }
 
 textarea::placeholder {
-  color: red;
+  @include bodyText(1.5rem);
+  text-transform: uppercase;
 }
 
+// footer
+
+footer {
+  display: flex;
+  justify-content: center;
+  background: $black;
+
+  p {
+    color: $offWhite;
+    padding: 10px 0;
+  }
+}
