--- a/styles/styles.css
+++ b/styles/styles.css
@@ -975,6 +975,12 @@ footer p {
   width: 100%;
   padding: 10px;
   border-bottom: 2px solid #065635;
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
 }
 
 .blogForm .formFlex2 {
@@ -1082,6 +1088,317 @@ footer {
       -ms-flex-pack: center;
           justify-content: center;
   background: #151514;
+}
+
+footer p {
+  color: #F5F5F5;
+  padding: 10px 0;
+}
+
+.contactBody {
+  background-color: #E0FDDF;
+}
+
+.contactHeader {
+  height: 70vh;
+  min-height: 400px;
+  max-height: 500px;
+  background: url(/assets/contact-image.jpg) center/cover;
+  position: relative;
+}
+
+.contactHeaderFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contactHeaderFlex h1 {
+  margin-top: 100px;
+}
+
+.contactHeaderNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  min-width: 400px;
+}
+
+.contactHeaderNav .contactLogo {
+  width: 200px;
+  min-width: 150px;
+  margin-top: 10px;
+}
+
+.contactHeaderNav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 600px;
+  min-width: 400px;
+}
+
+.contactFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contactForm {
+  width: 75%;
+  height: 550px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #F5F5F5;
+  position: relative;
+  top: -120px;
+  left: -50px;
+  -webkit-box-shadow: 33px 30px 0 -9px #F8FB05;
+          box-shadow: 33px 30px 0 -9px #F8FB05;
+}
+
+.contactForm input {
+  border: none;
+  background: #F5F5F5;
+}
+
+.contactForm fieldset {
+  border: none;
+  width: 650px;
+  min-height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.contactForm .contactFormFlex1 {
+  height: 75px;
+  width: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 20px;
+  padding-left: 0;
+}
+
+.contactForm .contactFormFlex1 label {
+  position: absolute;
+  top: -7px;
+  margin-left: 20px;
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
+  text-transform: uppercase;
+}
+
+.contactForm .contactFormFlex1 .contactEmailFlex,
+.contactForm .contactFormFlex1 .contactNameFlex {
+  width: 47%;
+}
+
+.contactForm .contactFormFlex1 .contactEmailFlex input[type="text"],
+.contactForm .contactFormFlex1 .contactEmailFlex input[type="email"],
+.contactForm .contactFormFlex1 .contactNameFlex input[type="text"],
+.contactForm .contactFormFlex1 .contactNameFlex input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border-bottom: 2px solid #065635;
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
+}
+
+.contactForm .contactFormFlex2 {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 20px;
+  padding-left: 0;
+}
+
+.contactForm .contactFormFlex2 textarea {
+  min-width: 650px;
+  max-width: 650px;
+  min-height: 200px;
+  max-height: 200px;
+  padding: 20px;
+  background-color: #F5F5F5;
+  border: 2px solid #065635;
+  resize: none;
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
+}
+
+.contactForm .contactFormFlex2 button {
+  margin-top: 10px;
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Kumar One', sans-serif;
+  font-weight: regular;
+  line-height: 5.8rem;
+  letter-spacing: 2.1px;
+  background-color: #065635;
+  color: #F5F5F5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 225px;
+  height: 50px;
+  border: none;
+  width: 100%;
+  margin-top: 50px;
+  height: 40px;
+}
+
+textarea::-webkit-input-placeholder {
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
+  text-transform: uppercase;
+}
+
+textarea:-ms-input-placeholder {
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
+  text-transform: uppercase;
+}
+
+textarea::-ms-input-placeholder {
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
+  text-transform: uppercase;
+}
+
+textarea::placeholder {
+  font-size: 1.5rem;
+  color: #151514;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
+  text-transform: uppercase;
+}
+
+.contactInfo {
+  width: 25%;
+  height: 300px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  position: relative;
+  top: -20px;
+  margin-left: 20px;
+  padding: 20px 0 20px 20px;
+}
+
+.contactInfo .socialIcons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.contactInfo .socialIcons + p {
+  margin-top: 20px;
+}
+
+.contactInfo a i {
+  font-size: 2.5rem;
+  color: #065635;
+  padding-right: 25px;
+  margin-bottom: 0;
+}
+
+.address {
+  padding-top: 20px;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #151514;
+  clear: both;
 }
 
 footer p {
