--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -131,6 +131,7 @@
   display: flex;
   align-items: center;
   margin: 20px 0;
+ 
 
   i {
     font-size: 2rem;
@@ -314,6 +315,7 @@ footer {
   p {
     color: $offWhite;
     padding: 10px 0;
+    font-size: 1.5rem;
   }
 }
 
